change image address to a the image source link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terminal Background</title>
 </head>
-<body style="background: url('assets/images/background.webp') no-repeat center center fixed; background-size: cover;">
+<body style="background: url('https://as2.ftcdn.net/v2/jpg/05/98/12/23/1000_F_598122349_zeAn5Eavq5PkSE3BPlv0T8bat9DrNJM7.jpg') no-repeat center center fixed; background-size: cover;">
+    <!-- Terminal content goes here -->
 </body>
 </html>
