--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terminal Background</title>
+    <style>
+        body {
+            background: url('https://as2.ftcdn.net/v2/jpg/05/98/12/23/1000_F_598122349_zeAn5Eavq5PkSE3BPlv0T8bat9DrNJM7.jpg') no-repeat center center fixed;
+            background-size: cover;
+        }
+    </style>
 </head>
-<body style="background: url('https://as2.ftcdn.net/v2/jpg/05/98/12/23/1000_F_598122349_zeAn5Eavq5PkSE3BPlv0T8bat9DrNJM7.jpg') no-repeat center center fixed; background-size: cover;">
-    <!-- Terminal content goes here -->
+
+<body>
 </body>
 </html>
